--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇩🇪 德国-2.56MB/s(Youtube:不良林), server: 193.108.118.79, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-695.8KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.61MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
   - {name: 🇩🇪 德国-1.57MB/s(Youtube:不良林), server: 193.108.118.36, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-2.30MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-2.47MB/s(Youtube:不良林), server: 134.195.196.227, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇩🇪 德国-1.65MB/s(Youtube:不良林), server: 193.108.118.79, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇩🇪 德国-1.20MB/s(Youtube:不良林), server: 193.108.118.36, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 波兰-2.13MB/s(Youtube:不良林), server: 217.30.10.63, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇨🇦 加拿大-1.07MB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇭🇰 (已存活10天)香港-2.67MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 波兰-1.57MB/s(Youtube:不良林), server: 217.30.10.63, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: 38.68.135.19, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-2.96MB/s(Youtube:不良林), server: 154.12.35.230, port: 31522, type: vmess, uuid: ad6cb146-a1d1-4964-9e0b-b2c1af75cad8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [154.12.35.230]}}}
+  - {name: 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇦 加拿大-322.9KB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-411.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 波兰-2.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-2.67MB/s(Youtube:不良林)
       - 波兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-322.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 波兰-2.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-2.67MB/s(Youtube:不良林)
       - 波兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-322.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 波兰-2.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-2.67MB/s(Youtube:不良林)
       - 波兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-322.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活10天)香港-2.67MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 波兰-2.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-2.67MB/s(Youtube:不良林)
       - 波兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-322.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 波兰-2.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-2.67MB/s(Youtube:不良林)
       - 波兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-322.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 波兰-2.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-2.67MB/s(Youtube:不良林)
       - 波兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-322.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-695.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.47MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.65MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
-      - 波兰-2.13MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-2.67MB/s(Youtube:不良林)
       - 波兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-322.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-411.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
