--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-695.8KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.61MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇩🇪 德国-1.57MB/s(Youtube:不良林), server: 193.108.118.36, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-1.07MB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇭🇰 (已存活10天)香港-2.67MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-2.78MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.04MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-2.22MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇩🇪 德国-1.20MB/s(Youtube:不良林), server: 193.108.118.36, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 波兰-1.57MB/s(Youtube:不良林), server: 217.30.10.63, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇺🇸 美国-2.96MB/s(Youtube:不良林), server: 154.12.35.230, port: 31522, type: vmess, uuid: ad6cb146-a1d1-4964-9e0b-b2c1af75cad8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [154.12.35.230]}}}
-  - {name: 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇦 加拿大-322.9KB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-411.5KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-676.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-986.0KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.60MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.74MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.27MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-695.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
       - 波兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-322.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-676.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-986.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-695.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
       - 波兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-322.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-676.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-986.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-695.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
       - 波兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-322.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-676.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-986.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活10天)香港-2.67MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-695.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
       - 波兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-322.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-676.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-986.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-695.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
       - 波兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-322.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-676.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-986.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-695.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
       - 波兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-322.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-676.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-986.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-695.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.61MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.57MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.07MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活10天)香港-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.78MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.20MB/s(Youtube:不良林)
       - 波兰-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-322.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-676.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-986.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.27MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
