--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.49MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇭🇰 香港-755.0KB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇺🇸 美国-303.0KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇹🇭 泰国-261.2KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-258.2KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-1.52MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.07MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.37MB/s(Youtube:不良林), server: 195.154.200.150, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇸🇬 新加坡-2.24MB/s(Youtube:不良林), server: 8.214.33.158, port: 8088, type: ss, cipher: aes-256-gcm, password: songyu0504}
-  - {name: 🇨🇳 中国-959.1KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-713.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-313.4KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-405.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-166.2KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65081, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.08MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-865.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-351.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林), server: 141.98.168.250, port: 443, type: trojan, password: l6JKCZ, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.77MB/s(Youtube:不良林), server: node.sin.entrance.cyou, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: node.sin.entrance.cyou, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-755.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-303.0KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-261.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-865.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-755.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-303.0KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-261.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-865.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-755.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-303.0KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-261.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-865.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-755.0KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-755.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-303.0KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-261.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-865.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-755.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-303.0KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-261.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-865.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-755.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-303.0KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-261.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-865.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇭🇰 香港-755.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-303.0KB/s(Youtube:不良林)
-      - 🇹🇭 泰国-261.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-713.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-405.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-166.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-865.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.51MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
